--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="Keywords" content="rebatee, Giveaway and Free Sample">
-    <meta name="description" content="rebatee, Giveaway and Free Sample" />
+    <meta name="Keywords" content="rebatee, Giveaway and Free Sample, 100 Rebate">
+    <meta name="description" content="rebatee, Giveaway and Free Sample, 100 Rebate" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./reset.min.css">
-    <title>Giveaway and Free Sample</title>
+    <title>100 Rebate</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but GFS doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 100 Rebate doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
